# zotero-cli

./: .gitignore  README.md  pyproject.toml
zotero_cli/: __init__.py  __main__.py  api.py  auth.py  cli.py
